Mon Mar 17 22:05:01 1997  Per Bothner  <bothner@deneb.cygnus.com>

	* obj-test.scm:  New test.  Test record feature (if JDK 1.1).
	* Makefile.am, Makefile.in:  Update.

Mon Feb  3 22:58:45 1997  Per Bothner  <bothner@deneb.cygnus.com>

	* Makefile.am:  KAWATEST now uses kawa shell script.

Sat Jan 25 15:45:14 1997  Per Bothner  <bothner@deneb.cygnus.com>

	* test.scm:  Internal define is no longer expected to fail.
	* mac-test.scm, mac1.scm:  New test.
	* Makefile.am, Makefile.in:  Appropriate updates.

Sun Jan  5 19:30:22 1997  Per Bothner  <bothner@deneb.cygnus.com>

	* test.scm:  Imaginary literals are now supported.

Sun Dec 15 22:37:03 1996  Per Bothner  <bothner@deneb.cygnus.com>

	* num-test.scm:  Fix typo.
	* test.scm:  Add set! fail-expected where needed.
	Remove newline to fix one test.

Fri Dec 13 17:04:54 1996  Per Bothner  <bothner@deneb.cygnus.com>

	New directory - for test suites for Kawa.